--- a/codes/py/misc/.gitignore
+++ b/codes/py/misc/.gitignore
@@ -3,7 +3,9 @@ cache/
 output*
 cache*
 channel-*
+gen_podcast_rss_conf.py
 podcast_xml/
 podcast_mp3/
-gen_podcast_rss_conf.py
 podcast_rss/
+podcast_image/
+podcast_rsync.sh
