--- a/codes/py/nginx-upload/server.conf
+++ b/codes/py/nginx-upload/server.conf
@@ -13,7 +13,7 @@ server {
 
     # https://www.linuxprobe.com/nginx-upload-module.html
     # DON'T END WITH /
-    location /upload {
+    location ~ /(upload|file_upload/multiple_uploads_to_s3) {
         # 转到后台处理URL,表示Nginx接收完上传的文件后，然后交给后端处理的地址
         upload_pass @python;
 
@@ -27,7 +27,7 @@ server {
         # 上传文件的权限，rw表示读写 r只读
         upload_store_access user:rw group:rw all:rw;
 
-        set $upload_field_name "file";
+        set $upload_field_name "mpfile";
         # upload_resumable on;
 
         # 这里写入http报头，pass到后台页面后能获取这里set的报头字段
