--- a/codes/golang/grpc_test/Makefile
+++ b/codes/golang/grpc_test/Makefile
@@ -1,3 +1,9 @@
-gen:
+gen_proto:
 	mkdir -p hello
 	protoc -I. hello.proto --go_out=plugins=grpc:hello
+
+run_client:
+	go run client/main.go --server_addr localhost:10002
+
+run_server:
+	go run server/main.go --port 10002
